src/objects/Project_Cohort__c.object
<CustomObject>
    <fields>
        <fullName>Account_Project_Key__c</fullName>
        <description>Account ID and Project Value, used to prevent duplicates</description>
        <inlineHelpText>Account ID and Project Value, used to prevent duplicates</inlineHelpText>
        <label>Account Project Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Cohorts</relationshipLabel>
        <relationshipName>Project_Cohorts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acreage_Cohort__c</fullName>
        <description>If &lt; 100, round to a multiple of 10
if &gt;= 100 round to a multiple of 50</description>
        <formula>if (Acres_in_Project__c &lt;= 100,
    CEILING(Acres_in_Project__c/10)*10,
    CEILING(Acres_in_Project__c/50)*50
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If &lt; 100, round to a multiple of 10
if &gt;= 100 round to a multiple of 50</inlineHelpText>
        <label>Acreage Cohort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acres_in_Project__c</fullName>
        <label>Acres in Project</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AreaName__c</fullName>
        <label>AreaName</label>
        <length>52</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Cohort__c</fullName>
        <label>Location Cohort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>In State</fullName>
                </value>
                <value>
                    <fullName>Distant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This cohort will be locked if an acquisition opportunity is closed won for this account.</description>
        <inlineHelpText>This cohort will be locked if an acquisition opportunity is closed won for this account.</inlineHelpText>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Pontiac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Account_Acres__c</fullName>
        <label>Total Account Acres</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>Project Cohort</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000000000}</displayFormat>
        <label>Project Cohort Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Cohorts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>